<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OutOfMemoryError</string>
    <string name="test_heap_oom">Test Heap OOM</string>
    <string name="test_stack_sof">Test Stack SOF</string>
    <string name="test_stack_oom">Test Stack OOM</string>
    <string name="test_rcp_oom">Test RuntimeConstanPool OOM</string>
    <string name="test_method_area_oom">Test MethodArea OOM</string>
    <string name="test_direct_memory_oom">Test DirectMemory OOM</string>

</resources>
